[build-system]
requires = ["setuptools", "wheel", "numpy", "cython"]
build-backend = "setuptools.build_meta"


[project]
name = "pyedfread"
version = "0.2.0"
description = "Read SR-Research EDF files."
keywords = ["psychology", "neuroscience", "eyelink", "sr-research", "edf"]

license = {file="LICENSE"}
classifiers =[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD 2-Clause "Simplified" License (BSD-2-Clause)",
    "Operating System :: OS Independent"
]
dependencies =[
    "numpy",
    "pandas"
    "h5py"]
authors = [
  {name = "Niklas Wilming"},
  {name = "Niel Morton"},
  {name = "Benedikt Ehinger"},
]
maintainers = [
  {name = "Benedikt Ehinger", email = "pyedfread@benediktehinger.de"}
]
readme = "readme.md"

[project.package_data]
pyedfread = ["data/*.asc", "data/*.EDF"]

[project.packages.find]
where = "src"

[project.extras_require]
test = "pytest"

[project.scripts]
convert_edf = "pyedfread:parse.convert_edf"
~                                                                                                    
~                                                                                                    

