[metadata]
name = pyedfread
version = 0.1.0
description = Read SR-Research EDF files with python.
keywords = psychology, neuroscience
license = BSD-2-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2-Clause "Simplified" License (BSD-2-Clause)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    pandas
    h5py
scripts =
    src/pyedfread/read_edf
package_dir =
    = src
packages = find:

[options.package_data]
pyedfread = data/*.asc, data/*.EDF

[options.packages.find]
where = src

[options.extras_require]
test = pytest
