[metadata]
name = edfread
version = 0.1.0
description = Read SR-Research EDF files.
keywords = psychology, neuroscience
license = BSD-2-Clause
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD 2-Clause "Simplified" License (BSD-2-Clause)
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    pandas
    h5py
package_dir =
    = src
packages = find:

[options.package_data]
pyedfread = data/*.asc, data/*.EDF

[options.packages.find]
where = src

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    convert_edf = edfread.edf.convert_edf
