[metadata]
name = pyedfread
version = 0.3.1
description = Read SR-Research EDF files.
keywords = psychology, neuroscience
license = BSD-2-Clause
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
install_requires =
    numpy
    pandas
    h5py
package_dir = src
packages = find:

[options.package_data]
pyedfread = data/*.asc, data/*.EDF

[options.packages.find]
where = src

[options.extras_require]
test = pytest

[options.entry_points]
console_scripts =
    convert_edf = pyedfread:parse.convert_edf
